--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
               <input type="email" id="email" name="email" required placeholder="あなたがいつもご利用のメールアドレスをご記入ください">
             </div>
             <div class="form-group">
-              <input type="submit" value="Submit">
+              <input type="image" src="images/pc-cta-btn@2x.webp" alt="Submit">
             </div>
           </form>
           <!--  -->
-          <p class="fv-memo wbr">※登録後にお送りするメールが<wbr>「迷惑メールフォルダ」に入ってしまう可能性があります。<wbr>登録後にメールが届いていない場合は、必ず迷惑メールフォルダをご確認ください。
+          <p class="fv-memo wbr">登録後にお送りするメールが<wbr>「迷惑メールフォルダ」に入ってしまう可能性があります。<wbr>登録後にメールが届いていない場合は、必ず迷惑メールフォルダをご確認ください。
           </p>
         </div>
       </section>
@@ -143,106 +143,170 @@
             </div>
             <h3>ゆず式ウィナーズトレードにチャレンジした<br>6名のトレーダーが即座に大成功！</h3>
             <img class="sc04-pic" src="images/pc-sc04-pic2@2x.webp" alt="" width="883" height="478">
-            <p>トレンドの中にあるチャンスを<br>
-              計算して割り出すノウハウということもあり、<br><br>
-              一見すると高度で複雑なノウハウに聞こえるかもしれませんが、<br>
-              難しい勉強や高度な分析術などは、一切必要ありません。<br><br>
-              トレード未経験の初心者でも即座に実践できるよう、<br>
-              簡単さも鑑みて完成されたトレード法です。<br><br>
-              シンプルな方法で安定利益を目指せる<br>
-              ゆず式ウィナーズトレードだからこそ、<br><br>
-              短期間ですぐに成果を出すことができます。<br><br>
-              損失を最低限に抑え、トレードで負ける理由を改善し、<br>
-              安定かつ着実な利益を見込めるロジックを作ることで、<br>
-              誰でも安心できる毎日を過ごせるのです。</p>
+            <p>トレンドの中にあるチャンスを<br> 計算して割り出すノウハウということもあり、<br><br> 一見すると高度で複雑なノウハウに聞こえるかもしれませんが、<br>
+              難しい勉強や高度な分析術などは、一切必要ありません。<br><br> トレード未経験の初心者でも即座に実践できるよう、<br> 簡単さも鑑みて完成されたトレード法です。<br><br>
+              シンプルな方法で安定利益を目指せる<br> ゆず式ウィナーズトレードだからこそ、<br><br> 短期間ですぐに成果を出すことができます。<br><br>
+              損失を最低限に抑え、トレードで負ける理由を改善し、<br> 安定かつ着実な利益を見込めるロジックを作ることで、<br> 誰でも安心できる毎日を過ごせるのです。</p>
           </div>
         </div>
       </section>
       <!-- section-05 -->
       <section class="section-05">
         <div class="w960">
-
           <h2>講師紹介</h2>
           <h3>トレード界隈で話題を集める</h3>
           <h4>新時代を牽引する天才女性トレーダー</h4>
           <div class="profile">
-
             <p class="name">松岡 ゆず</p>
             <p class="romaji">- Matsuoka Yuzu -</p>
-            <p class="title">
-              独学でトレードを始め、多大な成功を収めたのち、<br>
-              参加者全員にその場で成果を出させる実績から、<br>
-              一部界隈で「稼がせるトレーダー」と呼ばれる。<br><br>
-              安定性と利益効率に特化した、<br>
-              ゆず式ウィナーズトレードを開発。<br><br>
-              先の値動きを高い精度で予測するオリジナルメソッドを使って、<br>
-              多大なる成果を上げる。<br><br>
-              今回、そのゆず式ウィナーズトレードをより多くの人に広めるため、<br>
-              完全無料のWEB講座を公開。</p>
+            <p class="title"> 独学でトレードを始め、多大な成功を収めたのち、<br> 参加者全員にその場で成果を出させる実績から、<br> 一部界隈で「稼がせるトレーダー」と呼ばれる。<br><br>
+              安定性と利益効率に特化した、<br> ゆず式ウィナーズトレードを開発。<br><br> 先の値動きを高い精度で予測するオリジナルメソッドを使って、<br> 多大なる成果を上げる。<br><br>
+              今回、そのゆず式ウィナーズトレードをより多くの人に広めるため、<br> 完全無料のWEB講座を公開。</p>
+          </div>
+        </div>
+      </section>
+      <!-- section-06 -->
+      <section class="section-06">
+        <h2 class="title_h2">損失額を最小限に抑えることで</h2>
+        <h3 class="title_h3">右肩上がりの資産増加を狙う</h3>
+        <div class="w960">
+          <div class="box-a">
+            <div class="pc-flex">
+              <div class="text-area"> ゆず式ウィナーズトレードだけが持つ大きな強み。<br><br> それは<span
+                  class="text-red text-bold">損失額を最小限に抑えるロジック</span>です。<br><br> ゆず式ウィナーズトレードは、高い勝率を誇るノウハウですが、<br>
+                トレードである以上、どんなに分析や計算を突き詰めても、<br> 100%勝ち続けることは出来ません。<br><br> どこかで必ず、損失を被るタイミングが来てしまいます。<br><br>
+                だからこそ、ゆず式ウィナーズトレードでは、<br> 勝率の高さを突き詰めるのと同時に、<br><br>
+                <span class="text-darkblue text-bold">負けた際に失う額を、限界まで抑える工夫</span>を施しました。<br><br>
+                ゆず式ウィナーズトレードが追及しているのは、<br> とにかく安定して資産を増やし続けること。<br><br> 勝率を高め、損失の機会を減らすだけでなく、<br><br>
+                失う金額そのものを最小限にすることで、<br>
+                <span class="text-marker-yellow">右肩上がりの資産増加を実現します。</span>
+              </div>
+              <img class="shadow_img" src="images/pc-sc06-pic@2x.webp" alt="" width="320" height="200">
             </div>
           </div>
-          </section>
-          <!-- section-06 -->
-          <section class="section-06">
-            <h2 class="title_h2">損失額を最小限に抑えることで</h2>
-            <h3 class="title_h3">右肩上がりの資産増加を狙う</h3>
-            <div class="box-a">
-              <div class="pc-flex">
-                <div class="text-area"> ゆず式ウィナーズトレードだけが持つ大きな強み。 それは損失額を最小限に抑えるロジックです。 ゆず式ウィナーズトレードは、高い勝率を誇るノウハウですが、
-                  トレードである以上、どんなに分析や計算を突き詰めても、 100%勝ち続けることは出来ません。 どこかで必ず、損失を被るタイミングが来てしまいます。 だからこそ、ゆず式ウィナーズトレードでは、
-                  勝率の高さを突き詰めるのと同時に、 負けた際に失う額を、限界まで抑える工夫を施しました。 ゆず式ウィナーズトレードが追及しているのは、 とにかく安定して資産を増やし続けること。
-                  勝率を高め、損失の機会を減らすだけでなく、 失う金額そのものを最小限にすることで、 右肩上がりの資産増加を実現します。 </div>
-                  <img src="" alt="">
-                </div>
-              </div>
-            </section>
+        </div>
+      </section>
       <!-- section-07 -->
       <section class="section-07">
-        <h2 class="title_h2">さらなる利益を狙うための</h2>
-        <h3 class="title_h3">特別戦略も用意しています</h3>
-        <div class="box-a">
-          <div class="pc-flex">
-            <div class="text-area"> ゆず式ウィナーズトレードは、 たった10日で20万円以上の利益を達成するなど、 極めて高いトレード実績を残している、 実績のあるトレード手法です。
-              安定性に特化しながら、高い利益率を実現し、 誰でも恒常的な安定収入の実現が見込める。 損失を抑えることで利益効率を向上させ、 右肩上がりに資産を増やし続けることを目的とした
-              このWEB講座だけのオリジナルメソッドです。 しかしながら、それだけでは終わりません。 今回の無料WEB講座の開講に向けて、 ゆず式ウィナーズトレードのメソッドを さらに発展させ、 さらに大きな利益を見込める
-              応用戦略をご用意しました。 ゆず式ウィナーズトレードが持つ安定性を保ちながら、 段違いの速度で資産形成が期待できる、 さらに短い期間で、 大きな利益を狙える手法が完成されたのです。
-              ゆず式ウィナーズトレードのさらなる可能性を引き出す特別戦略を、 このWEB講座の受講者だけにお教えします。 世界初公開となる、巨大な利益を利益を手にするための方法を、 このWEB講座を通じて手に入れてください。
+        <h2 class="title_h2 text-red">さらなる利益<span class="fs-40px">を</span>狙うため<span class="fs-40px">の</span></h2>
+        <h3 class="title_h3">特別戦略<span class="fs-40px">も</span>用意<span class="fs-40px">しています</span></h3>
+        <div class="w960">
+          <div class="box-a">
+            <div class="pc-flex">
+              <div class="text-area"> ゆず式ウィナーズトレードは、<br> たった10日で20万円以上の利益を達成するなど、<br><br> 極めて高いトレード実績を残している、<br>
+                実績のあるトレード手法です。<br><br> 安定性に特化しながら、高い利益率を実現し、<br> 誰でも恒常的な安定収入の実現が見込める。<br><br>
+                損失を抑えることで利益効率を向上させ、<br><br> 右肩上がりに資産を増やし続けることを目的とした<br> このWEB講座だけのオリジナルメソッドです。<br><br>
+                しかしながら、それだけでは終わりません。<br><br> 今回の無料WEB講座の開講に向けて、<br> ゆず式ウィナーズトレードのメソッドを<br> さらに発展させ、<br><br>
+                <span class="text-darkblue text-bold">さらに大きな利益を見込める</span><br> 応用戦略をご用意しました。<br><br>
+                ゆず式ウィナーズトレードが持つ安定性を保ちながら、<br> 段違いの速度で資産形成が期待できる、<br><br> さらに短い期間で、<br> 大きな利益を狙える手法が完成されたのです。<br><br>
+                ゆず式ウィナーズトレードのさらなる可能性を引き出す特別戦略を、<br> このWEB講座の受講者だけにお教えします。<br><br> 世界初公開となる、巨大な利益を利益を手にするための方法を、<br>
+                このWEB講座を通じて手に入れてください。
+              </div>
+              <img src="images/pc-sc07-pic@2x.webp" alt="" width="320" height="200">
             </div>
-            <img src="" alt="">
           </div>
         </div>
       </section>
       <!-- section-08 -->
       <section class="section-08">
-        <h2>ゆず式ウィナーズトレードが 今、あなたに必要な理由</h2>
-        <div class="box-a">
-          <div class="pc-flex">
-            <div class="text-area"> 誰でも今すぐ利益を目指せるゆず式ウィナーズトレードは、 あなたが今、最優先で学ぶべきトレード手法です。 日本だけでなく世界経済は、
-              長期にわたって厳しい環境が続いています。 円安による物価上昇、輸入資源の高騰、 年金制度の崩壊など、問題は山積みです。 ニュースを見れば連日報道されていますよね？ 不安定な経済情勢が続くからこそ、
-              あなたが毎日豊かな生活するために必要なもの。 それは、着実に利益を積み上げ続けられる資産運用術です。 だからこそ、高い勝率とリスクヘッジを兼ね備え、 安定して恒常的に利益を見込める
-              ゆず式ウィナーズトレードを学んでください。 個人が今すぐ利益を目指すために、 最高の方法となっています。 繰り返しお伝えしている通り、 ゆず式ウィナーズトレードを始めるのに、 トレードの知識や経験は一切不要です。
-              ノウハウを作り上げる段階から、 「誰でも簡単に実践出来る」ことを念頭に置いて、 初心者が即座に利益を出せるように開発されています。 投資経験ゼロの方でも一切問題なく、 今すぐ安定収入の実現を目指せるのです。
-              あなたに、苦しい生活とは無縁の、 豊かで安心できる幸せな毎日を送るための方法を、 このWEB講座を通じて、全てお教えします。 </div>
-            <img src="" alt="">
+        <h2>ゆず式ウィナーズトレード<span class="fs-40px">が</span><br>今、あなたに必要<span class="fs-40px">な</span>理由</h2>
+        <div class="w960">
+          <div class="box-a">
+            <div class="pc-flex">
+              <div class="text-area"> 誰でも今すぐ利益を目指せるゆず式ウィナーズトレードは、<br> あなたが今、最優先で学ぶべきトレード手法です。<br><br> 日本だけでなく世界経済は、<br>
+                長期にわたって厳しい環境が続いています。<br><br> 円安による物価上昇、輸入資源の高騰、<br> 年金制度の崩壊など、問題は山積みです。<br><br>
+                ニュースを見れば連日報道されていますよね？<br><br> 不安定な経済情勢が続くからこそ、<br> あなたが毎日豊かな生活するために必要なもの。<br><br> それは、<span
+                  class="text-red text-bold">着実に利益を積み上げ続けられる資産運用術</span>です。<br><br> だからこそ、高い勝率とリスクヘッジを兼ね備え、<br>
+                安定して恒常的に利益を見込める<br><br>
+                <span class="text-darkblue text-bold">ゆず式ウィナーズトレード</span>を学んでください。<br><br> 個人が今すぐ利益を目指すために、<br>
+                最高の方法となっています。<br><br> 繰り返しお伝えしている通り、<br> ゆず式ウィナーズトレードを始めるのに、<br> トレードの知識や経験は一切不要です。<br><br>
+                ノウハウを作り上げる段階から、<br> 「誰でも簡単に実践出来る」ことを念頭に置いて、<br><br> 初心者が即座に利益を出せるように開発されています。<br><br>
+                投資経験ゼロの方でも一切問題なく、<br> 今すぐ安定収入の実現を目指せるのです。<br><br> あなたに、苦しい生活とは無縁の、<br> 豊かで安心できる幸せな毎日を送るための方法を、<br>
+                このWEB講座を通じて、全てお教えします。
+              </div>
+              <img src="images/pc-sc08-pic@2x.webp" alt="" width="320" height="200">
+            </div>
           </div>
         </div>
       </section>
       <!-- section-09 -->
       <section class="section-09">
+        <div class="w960">
+          <div class="card">
+            <h2 class="parallelogram">ゆず式ウィナーズトレード無料WEB講座は<br>こんな方たちにメリットがあります</h2>
+            <img src="images/pc-sc09-pic1@2x.webp" alt="" width="207" height="197">
+            <ul>
+              <li>損失を抑えた手法で安定利益を狙いたい方</li>
+              <li>まったくの未経験からすぐに利益を出したい方</li>
+              <li>以前トレードに失敗してしまった方</li>
+              <li>コンスタントに利益が出せるトレード法を知りたい方</li>
+              <li>副業や投資に失敗して悩んでいる方</li>
+              <li>お金に不安がある方</li>
+              <li>手軽に実践出来、成果が見込めるトレード法を知りたい方</li>
+              <li>時間に縛られずに収入を得たい方</li>
+              <li>どんな不況でも利益を狙える方法を知りたい方</li>
+              <li>運任せのトレードから脱却したい方</li>
+              <li>多くのトレーダーが知らない「利益のチャンス」を知りたい方</li>
+            </ul>
+          </div>
+          <div class="card">
+            <h2 class="parallelogram">ゆず式ウィナーズトレード無料WEB講座は<br>こんな方たちにメリットがあります</h2>
+            <img src="images/pc-sc09-pic2@2x.webp" alt="" width="198" height="200">
+            <ul>
+              <li>誰でも安定して成果を見込めるトレード法</li>
+              <li>少ない元手から利益を狙える方法</li>
+              <li>誰でも着実に利益を狙えるサインの正体</li>
+              <li>低リスクで毎日安定して利益を目指せる方法</li>
+              <li>年齢や知識に関係なく成功できる方法</li>
+              <li>他では学べない、このWEB講座だけのオリジナルメソッド</li>
+              <li>非常に高い再現性を持った繰り返し勝てるトレード戦術</li>
+              <li>短時間で効率よく利益を狙える資産運用術</li>
+              <li>高勝率で次々と利益を狙えるトレード法</li>
+              <li>数多くの生徒が成果を出した実績のある手法</li>
+              <li>莫大な利益が眠っているトレード市場の正体</li>
+            </ul>
+          </div>
+          <div class="card">
+            <h2 class="parallelogram">ゆず式ウィナーズトレード無料WEB講座は<br>こんな方たちにメリットがあります</h2>
+            <img src="images/pc-sc09-pic3@2x.webp" alt="" width="203" height="188">
+            <ul>
+              <li>お金の不自由のない豊かで安心できる生活</li>
+              <li>恒常的な利益で安定した副収入</li>
+              <li>簡単トレードでお金を増やし続ける自由な人生</li>
+              <li>着実に資産が増えていく安心感</li>
+              <li>一生涯使える資産管理術</li>
+              <li>不況や経済情勢に関わらず得られる継続収入</li>
+              <li>これまで叶えられなかった夢を実現する毎日</li>
+            </ul>
+          </div>
+        </div>
       </section>
       <!-- section-10 -->
       <section class="section-10">
-        <p>「ゆず式ウィナーズトレード無料WEB講座」は、 あなたに安心できる豊かで幸せな毎日を過ごしてもらうために 開講したWEB講座です。 そのコンセプトに基づき、ウィナーズトレードは安定性に特化し、
-          リスクを限りなく減らして、着実な利益を見込める手法になっています。 あなたが勝ち続けるトレーダーになれるよう、 全力で成功まで導いていきますので、ぜひWEB講座を通じて、 ウィナーズトレードの真髄をお確かめください。
-          ゆず式ウィナーズトレードは、ノウハウの簡単さも追及し、 あなたの年齢や投資の知識に一切関係なく、 利益を目指していける手法です。 あなたが成功するために必要なものは、 このWEB講座を通じて全てお渡ししますので、
-          大きな期待を胸に、WEB講座にご参加ください。 あなたのチャレンジを、心よりお待ちしています。 </p>
-        <p class="sign">松岡ゆず</p>
+        <div class="w960">
+          <p>「ゆず式ウィナーズトレード無料WEB講座」は、<br> あなたに安心できる豊かで幸せな毎日を過ごしてもらうために<br> 開講したWEB講座です。<br><br>
+            そのコンセプトに基づき、ウィナーズトレードは安定性に特化し、<br> リスクを限りなく減らして、着実な利益を見込める手法になっています。<br><br> あなたが勝ち続けるトレーダーになれるよう、<br>
+            全力で成功まで導いていきますので、ぜひWEB講座を通じて、<br> ウィナーズトレードの真髄をお確かめください。<br><br> ゆず式ウィナーズトレードは、ノウハウの簡単さも追及し、<br>
+            あなたの年齢や投資の知識に一切関係なく、<br> 利益を目指していける手法です。<br><br> あなたが成功するために必要なものは、<br> このWEB講座を通じて全てお渡ししますので、<br>
+            大きな期待を胸に、WEB講座にご参加ください。<br><br> あなたのチャレンジを、心よりお待ちしています。 </p>
+          <p class="sign">松岡ゆず</p>
+        </div>
       </section>
       <!-- section-11 -->
       <section class="section-11">
         <div class="section-inner">
-          <h2>未経験者でも今すぐ成果が見込める特別なトレード法を<br>このWEB講座の受講者だけに全てお教えします</h2>
-          <p class="memo_p wbr">※登録後にお送りするメールが<wbr>「迷惑メールフォルダ」に入ってしまう可能性があります。 <wbr>登録後にメールが届いていない場合は、必</p>
+          <h2 class="fv-copy">未経験者でも今すぐ成果が見込める特別なトレード法を<br>このWEB講座の受講者だけに全てお教えします</h2>
+          <!--  -->
+          <form action="#" method="post">
+            <div class="form-group">
+              <input type="email" id="email" name="email" required placeholder="あなたがいつもご利用のメールアドレスをご記入ください">
+            </div>
+            <div class="form-group">
+              <input type="image" src="images/pc-cta-btn@2x.webp" alt="Submit">
+            </div>
+          </form>
+          <!--  -->
+          <p class="memo_p wbr">登録後にお送りするメールが<wbr>「迷惑メールフォルダ」に入ってしまう可能性があります。 <wbr>登録後にメールが届いていない場合は、<wbr>必ず迷惑メールフォルダをご確認ください。</p>
         </div>
       </section>
       <!--  -->
