--- a/index.html
+++ b/index.html
@@ -53,25 +53,6 @@
           </div>
         </header>
         <div class="section-inner">
-          <h1>証拠金<span class="fs-104px">50</span><span class="fs-44px">万円</span>からたった半年<span
-              class="fs-52px"></span>で<br>
-            <span class="text-pink"><span class="fs-120px ">290</span><span class="fs-48px">万円</span></span><span
-              class="fs-58px">の</span>利益<span class="fs-58px">を</span>獲得！
-          </h1>
-          <h2>チャート<span class="fs-26px">に</span>現<span class="fs-26px">れる</span>着実<span class="fs-26px">な</span>利益<span
-              class="fs-26px">が</span>見込<span class="fs-26px">める</span>チャンス</h2>
-          <p class="fv_p">「スナイプポイント」を狙い、<br>驚異の安定性で利益を狙い続ける</p>
-          <p class="fv_p">これまでの常識を覆す最新トレード戦術を<br>1週間のWEB講座で全てお渡しします</p>
-          <div class="fv_th">今すぐ利益を手にするために<br>必要な情報を全て教えます</div>
-          <div class="fv-1st_td"> 無料WEB講座で得られる知識 </div>
-          <div class="fv-2nd_td">
-            <ul>
-              <li>先の値動きを高精度で予測するサイ<span class="narrow">ン</span>「スナイプポイン<span class="narrow">ト」</span>の正体</li>
-              <li>どんな相場でも変わらず、継続的に利益を目指す方法</li>
-              <li>目指せる倍増させるチャート分析術</li>
-              <li>知識ゼロから実践できるシンプルで簡単なノウハウ</li>
-            </ul>
-          </div>
           <p class="fv-copy">今すぐ資産を増やすために<br>必要な情報だけを絞って分かりやすくお伝えします </p>
           <!--  -->
           <form action="#" method="post">
@@ -79,7 +60,9 @@
               <input type="email" id="fv-email" name="email" required placeholder="あなたがいつもご利用のメールアドレスをご記入ください">
             </div>
             <div class="form-group">
-              <input type="image" src="images/pc-cta-btn@2x.webp" alt="Submit">
+              <button type="submit">
+                <img src="images/pc-cta-btn@2x.webp" alt="Submit">
+              </button>
             </div>
           </form>
           <!--  -->
@@ -91,8 +74,6 @@
       <!-- 利益のチャンスを狙い撃つ -->
       <section class="section-02">
         <div class="w960">
-          <h2 class="">利益のチャンスを狙い撃つ</h2>
-          <p class="bln">ゆず式ウィナーズトレードの実績がこちら</p>
           <img src="images/pc-sc02-record@2x.webp" alt="実績" width="960" height="1934">
         </div>
       </section>
@@ -100,9 +81,10 @@
       <!-- 正確無比な値動き予測で安定利益を狙う -->
       <section class="section-03">
         <div class="w960">
-          <h2 class="title_h2">正確無比<span class="fs-40px">な</span>値動き予測<span class="fs-40px">で</span>安定利益<span
+          <!-- <h2 class="title_h2">正確無比<span class="fs-40px">な</span>値動き予測<span class="fs-40px">で</span>安定利益<span
               class="fs-40px">を</span>狙う</h2>
-          <h3 class="title_h3">ゆず式ウィナーズトレード<span class="fs-40px">とは</span>？</h3>
+          <h3 class="title_h3">ゆず式ウィナーズトレード<span class="fs-40px">とは</span>？</h3> -->
+          <img class="section03-title_img" src="images/pc-sc03-title@2x.webp" alt="" width="883" height="166">
           <div class="box-a">
             <div class="pc-flex">
               <div class="text-area"> ゆず式ウィナーズトレードとは、<br> 誰もが「豊かで安心できる毎日を過ごせる」をコンセプトに、<br><br>
@@ -113,7 +95,7 @@
                 トレンドが生まれた際に出現する、<br> このスナイプポイントを、<br><br> 何重ものフィルタにかけて、<br> 計算することで割り出し、<br><br> 安定して利益を目指していくのが、<br>
                 ゆず式ウィナーズトレードの概要になります。<br><br> また、安定性だけでなく、
               </div>
-              <img class="text-area_img" src="images/pc-sc03-pic@2x.webp" alt="" width="320" height="200">
+              <img class="text-area_img" src="images/pc-sc03-pic@2x.webp" alt="" width="320" height="200" loading="lazy" decoding="async">
             </div>
             <ul>
               <li>シンプルで初心者でも実践出来る</li>
@@ -126,9 +108,11 @@
         </div>
       </section>
       <!-- section-04 -->
+      <!-- 負け続きだったトレーダーでも -->
       <section class="section-04">
         <div class="w960">
-          <h2>負け続きだったトレーダーでも<br>始めてすぐ<span class="fs-40px">に</span>大きな成功<span class="fs-40px">を</span>目指せます</h2>
+          <!-- <h2>負け続きだったトレーダーでも<br>始めてすぐ<span class="fs-40px">に</span>大きな成功<span class="fs-40px">を</span>目指せます</h2> -->
+<img class="section04-title_img" src="images/pc-sc04-title@2x.webp" alt="" width="883" height="166">
           <div class="box-a">
             <div class="pc-flex">
               <div class="text-area"> ゆず式ウィナーズトレードは、<br> トレード未経験の初心者でも即座に実践できるよう、<br> 簡単さも鑑みて完成された手法です。<br><br>
@@ -136,10 +120,11 @@
                 誰でもすぐに、安定利益を目指していけます。<br><br> 加えて、ゆず式ウィナーズトレードは、<br> ロジックを作り上げる際、<br><br> これまでトレードで負け続きだった方や、<br>
                 大きな失敗をしてしまった方の意見を取り入れています。<br><br> 多くのトレーダーが躓いてしまう点をヒアリングし、<br> それを改善するための方法をロジックに落とし込むことで、<br>
                 誰でも成果が出せるトレードを目指し、完成されました。<br><br> トレードで大きな失敗を経験した<br> トレーダー6名も、始めてすぐに多大な成果を上げました。 </div>
-              <img class="text-area_img" src="images/pc-sc04-pic1@2x.webp" alt="" width="320" height="200">
+              <img class="text-area_img" src="images/pc-sc04-pic1@2x.webp" alt="" width="320" height="200" loading="lazy" decoding="async">
             </div>
-            <h3>ゆず式ウィナーズトレードにチャレンジした<br>6名のトレーダーが即座に大成功！</h3>
-            <img class="sc04-pic" src="images/pc-sc04-pic2@2x.webp" alt="" width="883" height="478">
+            <!-- <h3>ゆず式ウィナーズトレードにチャレンジした<br>6名のトレーダーが即座に大成功！</h3> -->
+            <img class="section04-title2_img" src="images/pc-sc04-title2@2x.webp" alt="" width="721" height="99">
+            <img class="sc04-pic" src="images/pc-sc04-pic2@2x.webp" alt="" width="883" height="478" loading="lazy" decoding="async">
             <p>トレンドの中にあるチャンスを<br> 計算して割り出すノウハウということもあり、<br><br> 一見すると高度で複雑なノウハウに聞こえるかもしれませんが、<br>
               難しい勉強や高度な分析術などは、一切必要ありません。<br><br> トレード未経験の初心者でも即座に実践できるよう、<br> 簡単さも鑑みて完成されたトレード法です。<br><br>
               シンプルな方法で安定利益を目指せる<br> ゆず式ウィナーズトレードだからこそ、<br><br> 短期間ですぐに成果を出すことができます。<br><br>
@@ -148,10 +133,11 @@
         </div>
       </section>
       <!-- section-05 -->
+      <!-- 講師紹介 -->
       <section class="section-05">
         <div class="w960">
           <h2>講師紹介</h2>
-          <h3>トレード界隈で話題を集める</h3>
+          <h3>トレード界隈<span class="fs-40px">で</span>話題<span class="fs-40px">を</span>集める</h3>
           <h4>新時代を牽引する天才女性トレーダー</h4>
           <div class="profile">
             <p class="name">松岡 ゆず</p>
@@ -163,9 +149,9 @@
         </div>
       </section>
       <!-- section-06 -->
+      <!-- 損失額を最小限に抑えることで -->
       <section class="section-06">
-        <h2 class="title_h2">損失額を最小限に抑えることで</h2>
-        <h3 class="title_h3">右肩上がりの資産増加を狙う</h3>
+        <img class="section06-title_img" src="images/pc-sc06-title@2x.webp" alt="" width="694" height="168">
         <div class="w960">
           <div class="box-a">
             <div class="pc-flex">
@@ -178,15 +164,15 @@
                 失う金額そのものを最小限にすることで、<br>
                 <span class="text-marker-yellow">右肩上がりの資産増加を実現します。</span>
               </div>
-              <img class="shadow_img" src="images/pc-sc06-pic@2x.webp" alt="" width="320" height="200">
+              <img class="shadow_img" src="images/pc-sc06-pic@2x.webp" alt="" width="320" height="200" loading="lazy" decoding="async">
             </div>
           </div>
         </div>
       </section>
       <!-- section-07 -->
+      <!-- さらなる利益 -->
       <section class="section-07">
-        <h2 class="title_h2 text-red">さらなる利益<span class="fs-40px">を</span>狙うため<span class="fs-40px">の</span></h2>
-        <h3 class="title_h3">特別戦略<span class="fs-40px">も</span>用意<span class="fs-40px">しています</span></h3>
+        <img class="section07-title_img" src="images/pc-sc07-title@2x.webp" alt="" width="591" height="168">
         <div class="w960">
           <div class="box-a">
             <div class="pc-flex">
@@ -199,14 +185,15 @@
                 ゆず式ウィナーズトレードのさらなる可能性を引き出す特別戦略を、<br> このWEB講座の受講者だけにお教えします。<br><br> 世界初公開となる、巨大な利益を利益を手にするための方法を、<br>
                 このWEB講座を通じて手に入れてください。
               </div>
-              <img src="images/pc-sc07-pic@2x.webp" alt="" width="320" height="200">
+              <img src="images/pc-sc07-pic@2x.webp" alt="" width="320" height="200" loading="lazy" decoding="async">
             </div>
           </div>
         </div>
       </section>
       <!-- section-08 -->
+      <!-- ゆず式ウィナーズトレード -->
       <section class="section-08">
-        <h2>ゆず式ウィナーズトレード<span class="fs-40px">が</span><br>今、あなたに必要<span class="fs-40px">な</span>理由</h2>
+        <img class="section08-title_img" src="images/pc-sc08-title@2x.webp" alt="" width="603" height="168">
         <div class="w960">
           <div class="box-a">
             <div class="pc-flex">
@@ -221,17 +208,18 @@
                 投資経験ゼロの方でも一切問題なく、<br> 今すぐ安定収入の実現を目指せるのです。<br><br> あなたに、苦しい生活とは無縁の、<br> 豊かで安心できる幸せな毎日を送るための方法を、<br>
                 このWEB講座を通じて、全てお教えします。
               </div>
-              <img src="images/pc-sc08-pic@2x.webp" alt="" width="320" height="200">
+              <img src="images/pc-sc08-pic@2x.webp" alt="" width="320" height="200" loading="lazy" decoding="async">
             </div>
           </div>
         </div>
       </section>
       <!-- section-09 -->
+      <!-- ゆず式ウィナーズトレード無料WEB講座は -->
       <section class="section-09">
         <div class="w960">
           <div class="card">
-            <h2 class="parallelogram">ゆず式ウィナーズトレード無料WEB講座は<br>こんな方たちにメリットがあります</h2>
-            <img src="images/pc-sc09-pic1@2x.webp" alt="" width="207" height="197">
+<img class="parallelogram" src="images/pc-sc09-title-1@2x.webp" alt="" width="896" height="138">
+            <img src="images/pc-sc09-pic1@2x.webp" alt="" width="207" height="197" loading="lazy" decoding="async">
             <ul>
               <li>損失を抑えた手法で安定利益を狙いたい方</li>
               <li>まったくの未経験からすぐに利益を出したい方</li>
@@ -248,7 +236,8 @@
           </div>
           <div class="card">
             <h2 class="parallelogram">ゆず式ウィナーズトレード無料WEB講座は<br>こんな方たちにメリットがあります</h2>
-            <img src="images/pc-sc09-pic2@2x.webp" alt="" width="198" height="200">
+<img class="parallelogram" src="images/pc-sc09-title-2@2x.webp" alt="" width="896" height="138">
+<img src="images/pc-sc09-pic2@2x.webp" alt="" width="198" height="200" loading="lazy" decoding="async">
             <ul>
               <li>誰でも安定して成果を見込めるトレード法</li>
               <li>少ない元手から利益を狙える方法</li>
@@ -264,8 +253,9 @@
             </ul>
           </div>
           <div class="card">
-            <h2 class="parallelogram">ゆず式ウィナーズトレード無料WEB講座は<br>こんな方たちにメリットがあります</h2>
-            <img src="images/pc-sc09-pic3@2x.webp" alt="" width="203" height="188">
+            <!-- <h2 class="parallelogram">ゆず式ウィナーズトレード無料WEB講座は<br>こんな方たちにメリットがあります</h2> -->
+<img class="parallelogram" src="images/pc-sc09-title-3@2x.webp" alt="" width="896" height="138">
+<img src="images/pc-sc09-pic3@2x.webp" alt="" width="203" height="188" loading="lazy" decoding="async">
             <ul>
               <li>お金の不自由のない豊かで安心できる生活</li>
               <li>恒常的な利益で安定した副収入</li>
@@ -279,6 +269,7 @@
         </div>
       </section>
       <!-- section-10 -->
+      <!-- 「ゆず式ウィナーズトレード無料WEB講座」は、 -->
       <section class="section-10">
         <div class="w960">
           <p>「ゆず式ウィナーズトレード無料WEB講座」は、<br> あなたに安心できる豊かで幸せな毎日を過ごしてもらうために<br> 開講したWEB講座です。<br><br>
@@ -290,6 +281,7 @@
         </div>
       </section>
       <!-- section-11 -->
+      <!-- 未経験者でも今すぐ成果が見込める特別なトレード法を -->
       <section class="section-11">
         <div class="section-inner">
           <h2 class="fv-copy">未経験者でも今すぐ成果が見込める特別なトレード法を<br>このWEB講座の受講者だけに全てお教えします</h2>
@@ -302,7 +294,6 @@
               <button type="submit">
                 <img src="images/pc-cta-btn@2x.webp" alt="Submit">
               </button>
-              <!-- <input type="image" src="images/pc-cta-btn@2x.webp" alt="Submit"> -->
             </div>
           </form>
           <!--  -->
