細かいところを修正

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <title>ゆず式ウィナーズトレード-無料WEB講座-</title>
     <!-- アイキャッチ設定ここから -->
@@ -47,13 +48,13 @@
               <p class="header-top_p header-top-catch">安定しながら今すぐ利益を見込める</p>
               <p class="header-top_p">誰もが豊かな毎日を目指せる最新トレード戦略</p>
             </div>
-            <a class="header-top-cta-btn_a" href="#">
+            <a class="header-top-cta-btn_a" href="#cta">
               <img src="images/button-s@2x.webp" class="header-top-cta-btn_img" alt="すぐ無料で学ぶ" width="302" height="68">
             </a>
           </div>
         </header>
         <div class="section-inner">
-          <p class="fv-copy">今すぐ資産を増やすために<br>必要な情報だけを絞って分かりやすくお伝えします </p>
+          <p id="cta" class="fv-copy">今すぐ資産を増やすために<br>必要な情報だけを絞って分かりやすくお伝えします </p>
           <!--  -->
           <form action="#" method="post">
             <div class="form-group">
@@ -66,8 +67,7 @@
             </div>
           </form>
           <!--  -->
-          <p class="fv-memo wbr">登録後にお送りするメールが<wbr>「迷惑メールフォルダ」に入ってしまう可能性があります。<br>登録後にメールが届いていない場合は、必ず迷惑メールフォルダをご確認ください。
-          </p>
+          <p class="fv-memo wbr">登録後にお送りするメールが<wbr>「迷惑メールフォルダ」に入ってしまう可能性があります。<br>登録後にメールが届いていない場合は、必ず迷惑メールフォルダをご確認ください。</p>
         </div>
       </section>
       <!-- section-02 -->
@@ -152,6 +152,7 @@
       <!-- 講師紹介 -->
       <section class="section-05">
         <div class="w960">
+          <img class="sc05-title_img pc-none" src="images/sp-sc05-title@2x.webp" alt="" width="800" height="207">
           <div class="profile">
             <p class="name">松岡 ゆず</p>
             <p class="romaji">- Matsuoka Yuzu -</p>
@@ -159,6 +160,7 @@
               一部界隈で「稼がせるトレーダー」と呼ばれる。<br><br> 安定性と利益効率に特化した、<br class="sp-none"> ゆず式ウィナーズトレードを開発。<br><br>
               先の値動きを高い精度で予測するオリジナルメソッドを使って、<br class="sp-none"> 多大なる成果を上げる。<br><br> 今回、そのゆず式ウィナーズトレードをより多くの人に広めるため、<br
                 class="sp-none"> 完全無料のWEB講座を公開。</p>
+            <img class="profile_img pc-none" src="images/sp-sc05-yuzu-3@2x.webp" alt="" width="344" height="383">
           </div>
         </div>
       </section>
@@ -272,7 +274,6 @@
             </ul>
           </div>
           <div class="card">
-            <h2 class="parallelogram">ゆず式ウィナーズトレード無料WEB講座は<br>こんな方たちにメリットがあります</h2>
             <img class="parallelogram" src="images/pc-sc09-title-2@2x.webp" alt="" width="896" height="138">
             <img class="pic" src="images/pc-sc09-pic2@2x.webp" alt="" width="198" height="200" loading="lazy"
               decoding="async">
@@ -341,7 +342,9 @@
       </section>
     </main>
     <footer>
-      <p>プライバシーポリシー| 特定商取引法上の表記</p>
+      <p><a href="https://complete-60s.com/lp/mkmco/privacy.html" rel="nofollow noopener noreferrer"
+          target="_blank">プライバシーポリシー</a> | <a href="https://complete-60s.com/lp/mkmco/tokutei.html"
+          rel="nofollow noopener noreferrer" target="_blank">特定商取引法上の表記</a></p>
       <p>Copyright © LIFE Publishing Inc. All Rights Reserved.</p>
     </footer>
 
