6人の感想修正

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             </div>
           </form>
           <!--  -->
-          <p class="fv-memo wbr">登録後にお送りするメールが<wbr>「迷惑メールフォルダ」に入ってしまう可能性があります。<br>登録後にメールが届いていない場合は、必ず迷惑メールフォルダをご確認ください。</p>
+          <p class="fv-memo wbr">登録後にお送りするメールが<wbr>「迷惑メールフォルダ」に入ってしまう可能性があります。<br>登録後にメールが届いていない場合は、必ず迷惑メールフォルダをご確認ください。
+          </p>
         </div>
       </section>
       <!-- section-02 -->
@@ -137,9 +138,67 @@
             </div>
             <!-- <h3>ゆず式ウィナーズトレードにチャレンジした<br>6名のトレーダーが即座に大成功！</h3> -->
             <img class="section04-title2_img" src="images/pc-sc04-title2@2x.webp" alt="" width="721" height="99">
-            <img class="sc04-pic" src="images/pc-sc04-pic2@2x.webp" alt="" width="883" height="478" loading="lazy"
-              decoding="async">
-            <p>トレンドの中にあるチャンスを<br class="sp-none"> 計算して割り出すノウハウということもあり、<br class="sp-none"><br class="sp-none">
+            <!-- <img class="sc04-pic" src="images/pc-sc04-pic2@2x.webp" alt="" width="883" height="478" loading="lazy"              decoding="async"> -->
+            <!-- 6人の感想 -->
+            <div class="sc04-voices">
+<!-- 亀山さん -->
+              <div class="sc04-card">
+                <img class="sc04-card_img" src="images/kameyama-san@2x.webp" alt="" width="274" height="182">
+                <div class="sc04-card-text">
+                  <p class="sc04-card-name_p">亀山さん</p>
+                  <p class="sc04-card-voice_p">プラスが積み重なるような、右肩上がりの結果になっています。<br>本当に安定して成果が目指せるので、将来への心配がなくなりました。</p>
+                  <p class="sc04-card-memo_p">※個人の感想です</p>
+                </div>
+              </div>
+
+              <div class="sc04-card">
+                <img class="sc04-card_img" src="images/sasaki-san@2x.webp" alt="">
+                <div class="sc04-card-text">
+                  <p class="sc04-card-name_p">佐々木さん</p>
+                  <p class="sc04-card-voice_p">リスクが少なく、安定して成果が見込めるので、すごく楽しくトレードが出来ています！<br>安心できる生活が出来て、心まで豊かになりまし</p>
+                  <p class="sc04-card-memo_p">※個人の感想です</p>
+                </div>
+              </div>
+
+              <div class="sc04-card">
+                <img class="sc04-card_img" src="images/nakanishi-san@2x.webp" alt="">
+                <div class="sc04-card-text">
+                  <p class="sc04-card-name_p">中西さん</p>
+                  <p class="sc04-card-voice_p">私のような初心者にも、すごく優しい方法でした。<br>少ないお金からでも始められますし、もっと多くの方に知って欲しいと思いました。 </p>
+                  <p class="sc04-card-memo_p">※個人の感想です</p>
+                </div>
+              </div>
+
+              <div class="sc04-card">
+                <img class="sc04-card_img" src="images/kojima-san@2x.webp" alt="">
+                <div class="sc04-card-text">
+                  <p class="sc04-card-name_p">小嶋さん</p>
+                  <p class="sc04-card-voice_p">ゆずさんのおかげで、今までの失敗を取り戻すことができました。<br>常に安定して成果が見込めるので、安心して利益を目指せるのが、一番</p>
+                  <p class="sc04-card-memo_p">※個人の感想です</p>
+                </div>
+              </div>
+
+              <div class="sc04-card">
+                <img class="sc04-card_img" src="images/takeda-san@2x.webp" alt="">
+                <div class="sc04-card-text">
+                  <p class="sc04-card-name_p">武田さん</p>
+                  <p class="sc04-card-voice_p">私のような初心者にも、すごく優しい方法でした。<br>少ないお金からでも始められますし、もっと多くの方に知って欲しいと思いました。
+                  <p class="sc04-card-memo_p">※個人の感想です</p>
+                </p>
+                </div>
+              </div>
+
+              <div class="sc04-card">
+                <img class="sc04-card_img" src="images/ooshiro-san@2x.webp" alt="">
+                <div class="sc04-card-text">
+                  <p class="sc04-card-name_p">大城さん</p>
+                  <p class="sc04-card-voice_p">とってもシンプルで簡単なトレード法なのに、毎日のように成果が出せています。<br>自分の新しい夢に向かって、動き出せるようになりまし</p>
+                  <p class="sc04-card-memo_p">※個人の感想です</p>
+                </div>
+              </div>
+            </div>
+            <!--  -->
+            <p class="section04_p">トレンドの中にあるチャンスを<br class="sp-none"> 計算して割り出すノウハウということもあり、<br class="sp-none"><br class="sp-none">
               一見すると高度で複雑なノウハウに聞こえるかもしれませんが、<br class="sp-none">
               難しい勉強や高度な分析術などは、一切必要ありません。<br><br>トレード未経験の初心者でも即座に実践できるよう、<br class="sp-none">
               簡単さも鑑みて完成されたトレード法です。<br><br> シンプルな方法で安定利益を目指せる<br class="sp-none">ゆず式ウィナーズトレードだからこそ、<br
