メアドの入力箇所修正

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
           </form>
           <!--  -->
-          <p class="fv-memo wbr">登録後にお送りするメールが<wbr>「迷惑メールフォルダ」に入ってしまう可能性があります。<br>登録後にメールが届いていない場合は、必ず迷惑メールフォルダをご確認ください。
+          <p class="fv-memo wbr">登録後にお送りするメールが<wbr>「迷惑メールフォルダ」に入ってしまう可能性があります。<br>登録後にメールが届いていない場合は、<wbr>必ず迷惑メールフォルダをご確認ください。
           </p>
         </div>
       </section>
@@ -141,7 +141,7 @@
             <!-- <img class="sc04-pic" src="images/pc-sc04-pic2@2x.webp" alt="" width="883" height="478" loading="lazy"              decoding="async"> -->
             <!-- 6人の感想 -->
             <div class="sc04-voices">
-<!-- 亀山さん -->
+              <!-- 亀山さん -->
               <div class="sc04-card">
                 <img class="sc04-card_img" src="images/kameyama-san@2x.webp" alt="" width="274" height="182">
                 <div class="sc04-card-text">
@@ -150,7 +150,6 @@
                   <p class="sc04-card-memo_p">※個人の感想です</p>
                 </div>
               </div>
-
               <div class="sc04-card">
                 <img class="sc04-card_img" src="images/sasaki-san@2x.webp" alt="">
                 <div class="sc04-card-text">
@@ -159,7 +158,6 @@
                   <p class="sc04-card-memo_p">※個人の感想です</p>
                 </div>
               </div>
-
               <div class="sc04-card">
                 <img class="sc04-card_img" src="images/nakanishi-san@2x.webp" alt="">
                 <div class="sc04-card-text">
@@ -168,7 +166,6 @@
                   <p class="sc04-card-memo_p">※個人の感想です</p>
                 </div>
               </div>
-
               <div class="sc04-card">
                 <img class="sc04-card_img" src="images/kojima-san@2x.webp" alt="">
                 <div class="sc04-card-text">
@@ -177,17 +174,14 @@
                   <p class="sc04-card-memo_p">※個人の感想です</p>
                 </div>
               </div>
-
               <div class="sc04-card">
                 <img class="sc04-card_img" src="images/takeda-san@2x.webp" alt="">
                 <div class="sc04-card-text">
                   <p class="sc04-card-name_p">武田さん</p>
                   <p class="sc04-card-voice_p">私のような初心者にも、すごく優しい方法でした。<br>少ないお金からでも始められますし、もっと多くの方に知って欲しいと思いました。
                   <p class="sc04-card-memo_p">※個人の感想です</p>
-                </p>
                 </div>
               </div>
-
               <div class="sc04-card">
                 <img class="sc04-card_img" src="images/ooshiro-san@2x.webp" alt="">
                 <div class="sc04-card-text">
@@ -198,8 +192,8 @@
               </div>
             </div>
             <!--  -->
-            <p class="section04_p">トレンドの中にあるチャンスを<br class="sp-none"> 計算して割り出すノウハウということもあり、<br class="sp-none"><br class="sp-none">
-              一見すると高度で複雑なノウハウに聞こえるかもしれませんが、<br class="sp-none">
+            <p class="section04_p">トレンドの中にあるチャンスを<br class="sp-none"> 計算して割り出すノウハウということもあり、<br class="sp-none"><br
+                class="sp-none"> 一見すると高度で複雑なノウハウに聞こえるかもしれませんが、<br class="sp-none">
               難しい勉強や高度な分析術などは、一切必要ありません。<br><br>トレード未経験の初心者でも即座に実践できるよう、<br class="sp-none">
               簡単さも鑑みて完成されたトレード法です。<br><br> シンプルな方法で安定利益を目指せる<br class="sp-none">ゆず式ウィナーズトレードだからこそ、<br
                 class="sp-none"><br class="sp-none">短期間ですぐに成果を出すことができます。<br><br> 損失を最低限に抑え、トレードで負ける理由を改善し、<br
@@ -406,5 +400,6 @@
           rel="nofollow noopener noreferrer" target="_blank">特定商取引法上の表記</a></p>
       <p>Copyright © LIFE Publishing Inc. All Rights Reserved.</p>
     </footer>
+  </body>
 
 </html>
